oops, that's not code it's text

--- a/theme_sync/templates/default/theme_sync.sh.erb
+++ b/theme_sync/templates/default/theme_sync.sh.erb
@@ -3,5 +3,5 @@
 # Sync themes after compilation
 
 <% opsworks["layers"]["rails-app-server"]["instances"].each do |name,remote_server| %>
-rsync -av <%= "local_folder" %> <%= remote_server["private_ip"]:FOLDER_NAME %>
+rsync -av <%= "local_folder" %> <%= remote_server["private_ip"] %>:FOLDER_NAME
 <% end %>
