access the right layer

--- a/theme_sync/templates/default/theme_sync.sh.erb
+++ b/theme_sync/templates/default/theme_sync.sh.erb
@@ -2,6 +2,6 @@
 #
 # Sync themes after compilation
 
-<% opsworks["layers"]["rails-app-server"]["instances"].each do |name,remote_server| %>
+<% opsworks["layers"]["rails-app"]["instances"].each do |name,remote_server| %>
 rsync -av <%= "local_folder" %> <%= remote_server["private_ip"] %>:FOLDER_NAME
 <% end %>
