--- a/theme_sync/templates/default/theme_sync.sh.erb
+++ b/theme_sync/templates/default/theme_sync.sh.erb
@@ -3,10 +3,10 @@
 # Sync themes after compilation
 
 <% nodes.each do |server| %>
-<% if node.attributes.attribute?(:private_ip) && node.attributes.private_ip && Resolv.getaddress(node.attributes.private_ip) -%>
+<% if node.attributes.attribute?(:private_ip) && node.attributes.private_ip -%>
   <% ip = node.attributes.private_ip %>
 <% end -%>
-<% if node.attributes.attribute?(:ip) && node.attributes.ip && Resolv.getaddress(node.attributes.ip) -%>
+<% if node.attributes.attribute?(:ip) && node.attributes.ip -%>
   <% ip = node.attributes.ip %>
 <% end -%>
 rsync -av <%= "local_folder" %> <%= ip %>:FOLDER_NAME
