with file watching

--- a/theme_sync/templates/default/theme_sync.sh.erb
+++ b/theme_sync/templates/default/theme_sync.sh.erb
@@ -3,18 +3,19 @@
 # Sync themes after compilation
 
 THEMES_PATH='/usr/share/owncloud/data/admin/files'
+REMOTE_PATH='/srv/www/oliver/shared/public/assets'
 
-<% ip = "" %>
+<% ips = [] %>
 <% @nodes.each do |node| %>
   <% if node.attributes.attribute?(:private_ip) && node.attributes.private_ip -%>
-    <% ip = node.attributes.private_ip %>
+    <% ip << node.attributes.private_ip %>
   <% end -%>
   <% if node.attributes.attribute?(:ip) && node.attributes.ip -%>
-    <% ip = node.attributes.ip %>
+    <% ip << node.attributes.ip %>
   <% end -%>
 <% end %>
 
-inotifywait -mr --timefmt '%d/%m/%y %H:%M' --format '%T %w %f' -e close_write /usr/share/owncloud/data/admin/files | while read date time dir file; do
+inotifywait -mr --timefmt '%d/%m/%y %H:%M' --format '%T %w %f' -e close_write $THEMES_PATH | while read date time dir file; do
 
   FILECHANGE=${dir}${file}
   # convert absolute path to relative
@@ -23,6 +24,8 @@ inotifywait -mr --timefmt '%d/%m/%y %H:%M' --format '%T %w %f' -e close_write /u
 
   echo "THEME: $THEME"
 
-  # rsync --progress --relative -vrae 'ssh -p 22'  $FILECHANGEREL deploy@<%= ip %>:/somewhere && \
-  # echo "At ${time} on ${date}, file $FILECHANGE was backed up via rsync"
+  <% ips.each do |ip| -%>
+  echo rsync --progress --relative -vrae 'ssh -p 22' $FILECHANGEREL deploy@<%= ip %>:$REMOTE_PATH && \
+    echo "At ${time} on ${date}, file $FILECHANGE was backed up via rsync"
+  <% end -%>
 done
