--- a/theme_sync/templates/default/theme_sync.sh.erb
+++ b/theme_sync/templates/default/theme_sync.sh.erb
@@ -2,8 +2,8 @@
 #
 # Sync themes after compilation
 
-THEMES_PATH='/owncloud-data/admin/files'
-REMOTE_PATH='/srv/www/oliver/shared/public/assets'
+THEMES_PATH=<%= node[:theme_sync][:themes_path] %>
+REMOTE_PATH=<%= node[:theme_sync][:remote_path] %>
 
 <% ips = [] %>
 <% @nodes.each do |node| %>
