--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -43,4 +43,13 @@ http {
 
   include <%= node[:nginx][:dir] %>/conf.d/*.conf;
   include <%= node[:nginx][:dir] %>/sites-enabled/*;
+  
+  <% if node[:nginx][:default_domain].present? %>
+    server {
+      listen 80 default;
+      server_name _;
+      rewrite ^/(.*) <%= node[:nginx][:default_domain] %>/$1 permanent;
+    }
+  <% end %>
+  
 }
