--- a/theme_sync/templates/default/precompile_and_rsync.sh.erb
+++ b/theme_sync/templates/default/precompile_and_rsync.sh.erb
@@ -24,7 +24,7 @@ cp -Rf /cloud9/cloud9/$1 /cloud9/sync/themes/$2
 <% @nodes.each do |node| %>
 # Instance Type: <%= node.attributes.instance_type rescue nil %>
 <% if node.attributes.attribute?(:public_dns_name) && node.attributes.public_dns_name -%>
-rsync -avz -e ssh  /cloud9/sync deploy@<%= node.attributes.public_dns_name %>:/srv/www/oliver/shared
+rsync -arvce "ssh -o StrictHostKeyChecking=no" /cloud9/sync deploy@<%= node.attributes.public_dns_name %>:/srv/www/oliver/shared
 <% end -%>
 <% end -%>
 
