--- a/theme_sync/templates/default/precompile_and_rsync.sh.erb
+++ b/theme_sync/templates/default/precompile_and_rsync.sh.erb
@@ -9,11 +9,11 @@ exec 2>&1
 # RUN PRECOMPILE
 touch /cloud9/logs/$1.log
 cd /cloud9/precompiled_assets/oliver-precompile
-RAILS_ENV=production THEME_NAME=$1 bundle exec rake assets:precompile > /cloud9/logs/$1.log
+RAILS_ENV=production THEME_NAME=$1 MODE=$2 bundle exec rake assets:precompile > /cloud9/logs/$1.log
 
 # COPY PRECOMPILED ASSETS TO /cloud9/sync/precompiled_assets
 rm -rf /cloud9/sync/precompiled_assets/$2/$1
-cp -Rf /cloud9/precompiled_assets/$1 /cloud9/sync/precompiled_assets/$2
+cp -Rf /cloud9/precompiled_assets/oliver-precompile/public/$2/$1 /cloud9/sync/precompiled_assets/$2
 
 # COPY LIQUID FILES TO /cloud9/sync/themes/staging OR /cloud9/sync/themes/production
 rm -rf /cloud9/sync/themes/$2/$1
@@ -27,4 +27,3 @@ cp -Rf /cloud9/cloud9/$1 /cloud9/sync/themes/$2
 rsync -arvce "ssh -o StrictHostKeyChecking=no" /cloud9/sync deploy@<%= node.attributes.public_dns_name %>:/srv/www/oliver/shared
 <% end -%>
 <% end -%>
-
