--- a/nginx/templates/default/site.erb
+++ b/nginx/templates/default/site.erb
@@ -1,6 +1,14 @@
 server {
+  # <%= @application.inspect %>
+  
+  <% if node[:default_app] && (node[:default_app].to_s == @application[:name].to_s) %>
+  listen 80 default_server;
+  server_name _;
+  <% else %>
   listen   80;
   server_name  <%= @application[:domains].join(" ") %> <%= node[:hostname] %>;
+  <% end %>
+    
   access_log  <%= node[:nginx][:log_dir] %>/<%= @application[:domains].first %>.access.log;
 
   location / {
