--- a/theme_sync/templates/default/precompile_and_rsync.sh.erb
+++ b/theme_sync/templates/default/precompile_and_rsync.sh.erb
@@ -28,3 +28,5 @@ cp -Rf /cloud9/cloud9/$1 /cloud9/sync/themes/$2
 rsync -arvce "ssh -o StrictHostKeyChecking=no" /cloud9/sync deploy@<%= node.attributes.public_dns_name %>:/srv/www/oliver/shared
 <% end -%>
 <% end -%>
+
+curl -X PUT -H "Content-Type: application/json" -d '{"theme_name": "$1"}' https://www.volcanic.co.uk/api/v1/metacontents/update_timestamps.json
