added CORS support for fonts to nginx unicorn

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -54,6 +54,10 @@ server {
     }
   }
 
+  location ~* \.(eot|ttf|woff)$ {
+    add_header Access-Control-Allow-Origin *;
+  }
+
   location /nginx_status {
     stub_status on;
     access_log off;
