--- a/theme_sync/templates/default/precompile_and_rsync.sh.erb
+++ b/theme_sync/templates/default/precompile_and_rsync.sh.erb
@@ -29,4 +29,4 @@ rsync -arvce "ssh -o StrictHostKeyChecking=no" /cloud9/sync deploy@<%= node.attr
 <% end -%>
 <% end -%>
 
-curl -X PUT -H "Content-Type: application/json" -d '{"theme_name": "$1"}' https://www.volcanic.co.uk/api/v1/metacontents/update_timestamps.json
+curl -X PUT -H "Content-Type: application/json" -d '{"theme_name": "'"$1"'"}' https://www.volcanic.co.uk/api/v1/metacontents/update_timestamps.json
