added expiry header to images, js and css files in nginx

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -58,8 +58,9 @@ server {
     add_header Access-Control-Allow-Origin *;
   }
 
-  location ~*  \.(jpg|jpeg|png|gif|ico|css|js)$ {
-    expires 365d;
+  location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+    expires 1y;
+    add_header Cache-Control "public";
   }
 
   location /nginx_status {
