added expiry header to images, js and css files in nginx

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -54,11 +54,11 @@ server {
     }
   }
 
-  location ~* \.(eot|ttf|woff)$ {
+  location ~* \.(?:eot|ttf|woff)$ {
     add_header Access-Control-Allow-Origin *;
   }
 
-  location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+  location ~* \.(?:jpg|jpeg|png|gif|ico|css|js)$ {
     expires 1y;
     add_header Cache-Control "public";
   }
