--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -59,6 +59,7 @@ server {
   }
 
   location ~* \.(?:jpg|jpeg|png|gif|ico|css|js)$ {
+    root /srv/www/oliver/shared/themes;
     expires 1y;
     add_header Cache-Control "public";
   }
