commented out font lines from nginx

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -56,9 +56,9 @@ server {
     }
   }
 
-  location ~* \.(?:eot|ttf|woff)$ {
-    add_header Access-Control-Allow-Origin *;
-  }
+  # location ~* \.(?:eot|ttf|woff)$ {
+  #   add_header Access-Control-Allow-Origin *;
+  # }
 
   # location ~* \.(?:jpg|jpeg|png|gif|ico|css|js)$ {
   #   root /cloud9/cloud9;
