--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -60,11 +60,10 @@ server {
   #   add_header Access-Control-Allow-Origin *;
   # }
 
-  # location ~* \.(?:jpg|jpeg|png|gif|ico|css|js)$ {
-  #   root /cloud9/cloud9;
-  #   expires 1y;
-  #   add_header Cache-Control "public";
-  # }
+  location ~* \.(?:jpg|jpeg|png|gif|ico|css|js)$ {
+    expires 1y;
+    add_header Cache-Control "public";
+  }
 
   location /nginx_status {
     stub_status on;
