--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -63,11 +63,11 @@ server {
   <% if @application[:rails_env] == 'remote_development' %>
     # DO NOT WANT TO CACHE ALL THE THINGS
   <% else %>
-    location ~* \.(?:jpg|jpeg|png|gif|ico|css|js)$ {
-      root /srv/www/oliver/current/public;
-      expires 1y;
-      add_header Cache-Control "public";
-    }
+    # location ~* \.(?:jpg|jpeg|png|gif|ico|css|js)$ {
+    #   root /srv/www/oliver/current/public;
+    #   expires 1y;
+    #   add_header Cache-Control "public";
+    # }
   <% end %>
 
   location /nginx_status {
