added expiry to fonts and svg

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -58,12 +58,14 @@ server {
 
   location ~* \.(?:eot|ttf|woff)$ {
     add_header Access-Control-Allow-Origin *;
+    expires 1y;
+    add_header Cache-Control "public";
   }
 
   <% if @application[:rails_env] == 'remote_development' %>
     # DO NOT WANT TO CACHE ALL THE THINGS
   <% else %>
-    location ~* \.(?:jpg|jpeg|png|gif|ico|css|js)$ {
+    location ~* \.(?:jpg|jpeg|png|gif|svg|ico|css|js)$ {
       root /srv/www/oliver/current/public;
       expires 1y;
       add_header Cache-Control "public";
