--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -66,7 +66,7 @@ server {
     # DO NOT WANT TO CACHE ALL THE THINGS
   <% else %>
     location ~* \.(?:jpg|jpeg|png|gif|svg|ico|css|js)$ {
-      root /srv/www/oliver/current/public;
+      root <%= @application[:absolute_document_root] %>;
       expires 1y;
       add_header Cache-Control "public";
     }
