--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -56,15 +56,15 @@ server {
     }
   }
 
-  location ~* \.(?:eot|ttf|woff)$ {
-    add_header Access-Control-Allow-Origin *;
-    expires 1y;
-    add_header Cache-Control "public";
-  }
-
   <% if @application[:rails_env] == 'remote_development' %>
-    # DO NOT WANT TO CACHE ALL THE THINGS
+    # DON'T CACHE ALL THE THINGS
   <% else %>
+    location ~* \.(?:eot|ttf|woff)$ {
+      add_header Access-Control-Allow-Origin *;
+      expires 1y;
+      add_header Cache-Control "public";
+    }
+
     location ~* \.(?:jpg|jpeg|png|gif|svg|ico|css|js)$ {
       root <%= @application[:absolute_document_root] %>;
       expires 1y;
