--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -60,13 +60,13 @@ server {
     <% if @application[:rails_env] == 'remote_development' %>
       # DON'T CACHE ALL THE THINGS
     <% else %>
-      location ~* \.(?:eot|ttf|woff)$ {
+      location ^~ \.(?:eot|ttf|woff)$ {
         add_header Access-Control-Allow-Origin *;
         expires 1y;
         add_header Cache-Control "public";
       }
 
-      location ~* \.(jpg|jpeg|png|gif|svg|ico|css|js)$ {
+      location ^~ \.(jpg|jpeg|png|gif|svg|ico|css|js)$ {
         expires 1y;
         add_header Cache-Control "public";
       }
