--- a/theme_sync/templates/default/rsync_themes.sh.erb
+++ b/theme_sync/templates/default/rsync_themes.sh.erb
@@ -12,15 +12,15 @@ REMOTE_PATH=<%= node[:theme_sync][:remote_path] %>
 inotifywait -mr --timefmt '%d/%m/%y %H:%M' --format '%T %w %f' --exclude '(.c9)' -e close_write -e create -e delete -e move $THEMES_PATH | while read date time dir file; do
 
   FILECHANGE=${dir}${file}
-  # echo "FILECHANGE: $FILECHANGE"
+  echo "FILECHANGE: $FILECHANGE"
   # convert absolute path to relative
   FILECHANGEREL=`echo "$FILECHANGE" | sed 's_'$THEMES_PATH'/__'`
-  # echo "FILECHANGEREL: $FILECHANGEREL"
+  echo "FILECHANGEREL: $FILECHANGEREL"
   
   # THEME=`ruby -e "puts '$FILECHANGE'.match(/admin\/files\/(\w*)\//)[1]"`
   # echo "THEME: $THEME"
   REMOTE_DIR=$(dirname "${FILECHANGEREL}")
-  # echo "REMOTE_DIR: $REMOTE_DIR"
+  echo "REMOTE_DIR: $REMOTE_DIR"
   REMOTE_DIR_PATH="$REMOTE_PATH/$REMOTE_DIR"
   echo "REMOTE_DIR_PATH: $REMOTE_DIR_PATH"
 
@@ -28,5 +28,5 @@ inotifywait -mr --timefmt '%d/%m/%y %H:%M' --format '%T %w %f' --exclude '(.c9)'
 
   # echo rsync -arvce "ssh -o StrictHostKeyChecking=no" --delete $dir deploy@46.137.112.6:$REMOTE_DIR_PATH && \
   rsync -arvce "ssh -o StrictHostKeyChecking=no" --delete $dir deploy@46.137.112.6:$REMOTE_DIR_PATH && \
-  echo "At ${time} on ${date}, file $FILECHANGE was backed up via rsync"
+  echo "At ${time} on ${date}, file $FILECHANGE was backed up to $REMOTE_DIR_PATH via rsync"
 done
