added 443 listening for secure apex domains

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -87,6 +87,11 @@ server {
   }
 }
 
+server {
+  listen         443;
+  return         301 https://www.$host$request_uri;
+}
+
 <% if @application[:ssl_support] %>
 server {
   listen   443;
