added 443 listening for secure apex domains

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -88,7 +88,7 @@ server {
 }
 
 server {
-  listen 443;
+  listen 443 ssl;
   server_name _ *;
 
   ssl_certificate /etc/nginx/ssl/oliver.public.pem;
