scoped 443 listener to oliver

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -87,14 +87,16 @@ server {
   }
 }
 
-server {
-  listen 443 ssl;
+<% if @application[:absolute_document_root] == '/srv/www/oliver/current/public/' %>
+  server {
+    listen 443 ssl;
 
-  ssl_certificate /srv/www/ssl/oliver.public.pem;
-  ssl_certificate_key /srv/www/ssl/oliver.key;
+    ssl_certificate /srv/www/ssl/oliver.public.pem;
+    ssl_certificate_key /srv/www/ssl/oliver.key;
 
-  return 301 https://www.$host$request_uri;
-}
+    return 301 https://www.$host$request_uri;
+  }
+<% end %>
 
 <% if @application[:ssl_support] %>
 server {
