--- a/theme_sync/templates/default/precompile.sh.erb
+++ b/theme_sync/templates/default/precompile.sh.erb
@@ -23,11 +23,11 @@ RAILS_ENV=production THEME_NAME=$1 MODE=$2 bundle exec rake assets:precompile
 
 # MOVE PRECOMPILED ASSETS TO /deploy_themes/precompiled_assets
 rm -rf /deploy_themes/precompiled_assets/$2/$1
-mv -f /srv/www/precompile_app/current/public/$2/$1 /deploy_themes/precompiled_assets/$2
+mv -f /srv/www/precompile_app/current/public/$2/$1 /deploy_themes/precompiled_assets/$2/$1
 
 # MOVE LIQUID FILES TO /deploy_themes/themes/staging OR /deploy_themes/themes/production
 rm -rf /deploy_themes/themes/$2/$1
-mv -f /srv/www/volcanic_deploy/shared/themes/$2/$1 /deploy_themes/themes/$2
+mv -f /srv/www/volcanic_deploy/shared/themes/$2/$1 /deploy_themes/themes/$2/$1
 
 # RSYNC TO PUBLIC_DNS LIST
 IFS=','
