--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -41,6 +41,11 @@ http {
 
   server_names_hash_bucket_size <%= node[:nginx][:server_names_hash_bucket_size] %>;
 
+  # map "$http_x_forwarded_proto:$http_cloudfront_forwarded_proto" $forwarded_proto {
+  #   "http:https" "https";
+  #   default $http_x_forwarded_proto;
+  # }
+
   include <%= node[:nginx][:dir] %>/conf.d/*.conf;
   include <%= node[:nginx][:dir] %>/sites-enabled/*;
   
