--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -59,6 +59,7 @@ server {
     proxy_set_header Host $http_host;
     proxy_redirect off;
     proxy_set_header X-Forwarded-Proto $forwarded_proto;
+    proxy_set_header X-Forwarded-Port $forwarded_port;
     
 
   <% if node[:nginx] && node[:nginx][:proxy_read_timeout] -%>
