fix variable name

--- a/varnish/templates/default/backends.vcl.erb
+++ b/varnish/templates/default/backends.vcl.erb
@@ -20,7 +20,7 @@ backend server<%= index + 1 %> {
 sub vcl_init {
     # set up each server for saintmode
     <% [*1..server_count].each do |x| %>
-    new sm1 = saintmode.saintmode(server<%= x %>, 10);
+    new sm<%= x %> = saintmode.saintmode(server<%= x %>, 10);
     <% end %>
     # add saintmoded backends to round_robin director
     new brr = directors.round_robin();
