--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -108,7 +108,7 @@ sub vcl_backend_response {
 sub vcl_deliver {
     set resp.http.X-Varnish-Cache = req.http.X-Varnish-Cache;
     set resp.http.X-Varnish-Url = req.http.X-Varnish-Url;
-    set resp.http.Cache-Control = "private, no-cache"
+    set resp.http.Cache-Control = "private, no-cache";
     unset resp.http.X-Powered-By;
     unset resp.http.Server;
 }
