--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -61,7 +61,7 @@ sub vcl_backend_response {
        return (retry);
     }
 
-    if (beresp.http.X-Do-Not-Cache == "true" || beresp.url ~ "^\/users\/auth\/[a-z]*\/callback") {
+    if (beresp.http.X-Do-Not-Cache == "true" || bereq.url ~ "^\/users\/auth\/[a-z]*\/callback") {
         set beresp.uncacheable = true;
     } else {
         unset beresp.http.Set-Cookie;
