--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -53,6 +53,12 @@ sub vcl_pass {
     set req.http.X-Varnish-Cache = "pass";
 }
 
+sub vcl_backend_fetch {
+    if (bereq.retries > 0) {
+        set bereq.backend = brr.backend();
+    }
+}
+
 sub vcl_backend_response {
 
     if (beresp.status > 500) {
@@ -112,6 +118,9 @@ sub vcl_backend_response {
 }
 
 sub vcl_deliver {
+    if (!resp.http.Content-Type) {
+        set resp.http.Content-Type = "text/html; charset=utf-8";
+    }
     set resp.http.X-Varnish-Cache = req.http.X-Varnish-Cache;
     set resp.http.X-Varnish-Url = req.http.X-Varnish-Url;
     set resp.http.Cache-Control = "private, no-cache";
